<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/colorBackground">
    <LinearLayout android:layout_width="match_parent" android:layout_height="56dp"
        android:orientation="horizontal" android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/spacing_md" android:background="@color/colorSurface">
        <ImageView android:id="@+id/ivBack" android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size" android:src="@drawable/ic_back"
            android:contentDescription="Back"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/settings_title" android:textSize="@dimen/text_xl"
            android:textColor="@color/colorTextPrimary" android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="@dimen/spacing_md"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="@dimen/spacing_lg">
        <com.google.android.material.button.MaterialButton android:id="@+id/btnSupport"
            style="@style/ButtonSecondary" android:layout_width="match_parent"
            android:layout_height="52dp" android:text="@string/support_title"/>
        <com.google.android.material.button.MaterialButton android:id="@+id/btnPrivacyPolicy"
            style="@style/ButtonSecondary" android:layout_width="match_parent"
            android:layout_height="52dp" android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/privacy_policy"/>
        <com.google.android.material.button.MaterialButton android:id="@+id/btnTerms"
            style="@style/ButtonSecondary" android:layout_width="match_parent"
            android:layout_height="52dp" android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/terms_conditions"/>
        <View android:layout_width="match_parent" android:layout_height="1dp"
            android:background="@color/colorDivider" android:layout_marginVertical="@dimen/spacing_lg"/>
        <com.google.android.material.button.MaterialButton android:id="@+id/btnLogout"
            style="@style/ButtonDanger" android:layout_width="match_parent"
            android:layout_height="52dp" android:text="@string/logout"/>
        <TextView android:id="@+id/tvVersion" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_xl" android:textSize="@dimen/text_sm"
            android:textColor="@color/colorTextHint"/>
    </LinearLayout>
</LinearLayout>
