<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:padding="@dimen/spacing_lg"
    android:background="@color/colorBackground">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/otp_title" android:textSize="24sp"
        android:textColor="@color/colorTextPrimary" android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="@dimen/spacing_xl"/>
    <TextView android:id="@+id/tvPhoneHint" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_sm"
        android:textColor="@color/colorTextSecondary" android:textSize="@dimen/text_md"/>
    <com.google.android.material.textfield.TextInputLayout style="@style/TextInputDriver"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl" android:hint="@string/otp_hint">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etOtp"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="number" android:maxLength="6"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar android:id="@+id/progressBar" android:layout_width="40dp"
        android:layout_height="40dp" android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_md" android:visibility="gone"
        android:indeterminateTint="@color/colorPrimary"/>
    <com.google.android.material.button.MaterialButton android:id="@+id/btnVerify"
        style="@style/ButtonPrimary" android:layout_width="match_parent"
        android:layout_height="56dp" android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/btn_verify"/>
    <TextView android:id="@+id/tvResend" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_lg" android:text="@string/resend_otp"
        android:textColor="@color/colorPrimary" android:textSize="@dimen/text_md"/>
</LinearLayout>
